Initial commit: YouTube Downloader with Next.js, yt-dlp, and Redis
Features:
- Video to MP3/MP4 downloads
- Playlist to MP3/MP4 downloads
- Session-based authentication
- Rate limiting and security measures
- Auto file cleanup after 30 minutes
- Progress tracking and download history
- Responsive UI with Tailwind CSS

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,13 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Downloads folder
+downloads/
+
+# Redis compiled files
+redis-stable/
+redis-stable.tar.gz
+
 # vercel
 .vercel
 
